--- a/src/less/less-variables.less
+++ b/src/less/less-variables.less
@@ -1,1 +1,9 @@
 @text-light: #9ab;
+@background-dark: #2c3440;
+@background-dark-image: linear-gradient(180deg,#14181c 0,#14181c 250px,#2c3440 251px);
+@highlight: #678;
+@background-medium: #303c48;
+@background-light-image: linear-gradient(180deg,#14181c 0,#14181c 250px,#2c3440 251px);
+@green: #00b020;
+@hover-green: #00a11d;
+@active-green: #00971b;
